--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
     </form>
     <div class="loader-center"><span class="loader hidden"></span></div>
     <ul class="gallery"></ul>
+    <button class="load-more-button hidden" type="button">Load more</button>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
